--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 GEO_URL=http://ip-api.com/json
 WEATHER_URL=https://wttr.in/
+CHECK_CITY_URL=https://countriesnow.space/api/v0.1/countries/population/cities
